--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title><script>alert("boom")</script></title>
-<meta name="description" content="<script>alert("boom")</script>">
+<meta name="description" content="<script>alert('boom')</script>">
 </head>
 <body>
 
