--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title><script>alert("boom")</script></title>
 <meta name="description" content="<script>alert('boom')</script>">
+<meta property="og:image" content="http://localhost:3000/en/feed?url=https://www.cloudways.com/blog/prevent-xss-exploits-using-laravel-validation-and-sanitization/&host=ciao.com&topics[0]=xss" />
 </head>
 <body>
 
